--- a/app/globals.css
+++ b/app/globals.css
@@ -2260,8 +2260,8 @@ a[data-footnote-ref] {
 
 .share-popup {
   position: absolute;
-  bottom: calc(100% + 13px);
-  right: 0;
+  bottom: calc(100% + 15px);
+  right: -0.25rem;
   background: var(--color-bg);
   border: 1px solid var(--code-background-color);
   border-radius: 12px;
@@ -2318,13 +2318,7 @@ a[data-footnote-ref] {
   }
 }
 
-.share-button:hover,
-.share-wrapper[data-open="true"] .share-button {
-  transform: scale(1.1);
-}
-
-.share-button:hover svg,
-.share-wrapper[data-open="true"] .share-button {
+.share-wrapper[data-open="true"] .share-button svg {
   color: var(--color-link) !important;
 }
 
@@ -2908,6 +2902,10 @@ a[data-footnote-ref] {
 
   .share-copied:hover {
     background: rgba(34, 197, 94, 0.08);
+  }
+
+  .share-button:hover svg {
+    color: var(--color-link) !important;
   }
 }
 
